Build on Travis

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ########################################################################
 # global list of files to ignore
 .#*
@@ -6,6 +5,7 @@
 .*~
 *.o
 *.so
+*.swp
 
 ########################################################################
 # tar and the like
@@ -15,35 +15,14 @@
 *.tar.bz2
 
 ########################################################################
-# latex files
-*.aux
-*.nav
-*.snm
-*.toc
-*.vrb
-*.fls
-*.fdb_latexmk
-*.bbl
-*.blg
-
-########################################################################
 # Mac OS X file
 .DS_Store
 .DS_Store?
 ._*
 
 ########################################################################
-#autoconf
-autom4te.cache
-
-########################################################################
 # python generated files
 *.pyc
 *.pyo
 
-config.log
-makefile
-config.status
-testreports
-t1
-install
+yallt
