--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 language: go
-
 go:
-  - 1.8.x
-
-install:
-  - go get golang.org/x/tools/cmd/cover
-  - go get github.com/mattn/goveralls
-
+- 1.8.x
+before_install:
+- go get github.com/mattn/goveralls
 script:
-  - go test -v -covermode=count -coverprofile=coverage.out $HOME/gopath/bin/goveralls -service=travis-ci
+- $HOME/gopath/bin/goveralls -service=travis-ci
